# claude-python

./: .gitignore  CHANGELOG.md  claude-agent-sdk.md  deploy.sh  downLog.py  pyproject.toml  session-context-20260527.md
.github/actions/setup-claude-auth/: action.yml  refresh-identity-token.js
.github/workflows/: test.yml
debug_logs/: ai_response_20260602_155840_628756.json  ai_response_20260602_160021_652318.json  ai_response_20260602_163036_399856.json  ai_response_20260602_163432_958952.json  ai_response_20260602_163451_267627.json  ai_response_20260602_221751_832877.json  ai_response_20260602_221941_041272.json  ai_response_20260602_222006_632925.json  ai_response_20260602_222043_940572.json  ai_response_20260602_222127_518223.json  ai_response_20260603_104228_585627.json  ai_response_20260603_105841_961414.json  ai_response_20260603_110158_828358.json
examples/: actiondesign_agent_gateway.py  http_proxy_server.py
logs/actiondesign-agent/: 20260610_211150_conv_claude.jsonl  20260610_211150_conv_claude_stream.jsonl  20260610_211150_conv_img.jsonl  20260610_211150_conv_mimo.jsonl  20260610_211150_conv_mimo_code.jsonl  20260610_211150_conv_stream.jsonl  20260610_211150_conv_test.jsonl  20260610_211240_unknown_1781097160942.jsonl  20260610_211240_unknown_1781097160959.jsonl  20260610_211240_unknown_1781097160974.jsonl  20260610_211240_unknown_1781097160986.jsonl  20260610_211240_unknown_1781097160990.jsonl  20260610_211241_unknown_1781097161055.jsonl  20260610_211241_unknown_1781097161064.jsonl  20260610_211241_unknown_1781097161071.jsonl  20260610_211241_unknown_1781097161079.jsonl  20260610_211300_unknown_1781097180188.jsonl  20260610_211300_unknown_1781097180192.jsonl  20260610_211300_unknown_1781097180194.jsonl  20260610_211300_unknown_1781097180195.jsonl  20260610_211300_unknown_1781097180215.jsonl  20260610_211300_unknown_1781097180220.jsonl  20260610_211300_unknown_1781097180224.jsonl  20260610_211300_unknown_1781097180229.jsonl  20260610_230223_unknown_1781103743919.jsonl  20260610_230223_unknown_1781103743924.jsonl  20260610_230223_unknown_1781103743925.jsonl  20260610_230223_unknown_1781103743926.jsonl  20260610_230223_unknown_1781103743927.jsonl  20260610_230223_unknown_1781103743947.jsonl  20260610_230223_unknown_1781103743950.jsonl  20260610_230223_unknown_1781103743954.jsonl  20260610_230223_unknown_1781103743958.jsonl  20260610_230745_conv_claude_review.jsonl  20260610_230745_conv_review.jsonl  20260610_230846_unknown_1781104126483.jsonl  20260610_230846_unknown_1781104126485.jsonl  20260610_230846_unknown_1781104126486.jsonl  20260610_230846_unknown_1781104126487.jsonl  20260610_230846_unknown_1781104126503.jsonl  (+57 more)
scripts/: pull_debug_logs.sh
src/claude_agent_sdk/: _cli_version.py  _version.py
src/claude_agent_sdk/_internal/: session_resume.py  sessions.py  transcript_mirror_batcher.py
src/claude_agent_sdk/actiondesign_gateway/: __init__.py  actiondesign_backend_executor.py  app.py  backend_tools.py  (+14 more)
tests/: test_actiondesign_gateway_app.py  test_actiondesign_gateway_knowledge_vector_index.py  test_actiondesign_gateway_mimo_backend_loop.py  test_actiondesign_gateway_qdrant_knowledge_store.py  test_actiondesign_gateway_tool_protocol.py  test_http_proxy_tool_calls.py  test_session_store_anyio.py  test_transcript_mirror.py
